# t2t-en2chv

./: .gitignore  pyproject.toml
t2t_eng2chuv/: __main__.py  dataset.py  eval.py  train.py
tests/: tokenizer_test.py  torch_mps_test.py
