[tool.poetry]
name = "t2t-eng2chuv"
version = "0.1.0"
description = ""
authors = ["d61h6k4 <ddbihbka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.40.2"
datasets = "^2.19.1"
evaluate = "^0.4.2"
sacrebleu = "^2.4.2"
torch = "^2.3.0"
sentencepiece = "^0.2.0"
tokenizer = "^3.4.3"
protobuf = "^5.26.1"
numpy = "^1.26.4"
accelerate = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
tensorboard = "^2.16.2"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
